# cmake-template

./: CMakeLists.txt  README.md  vcpkg.json
apps/: CMakeLists.txt  lorem.cpp  say_hello.cpp
lib/: CMakeLists.txt
lib/include/: show_file.h
lib/src/: hello.cpp  show_file.cpp
resources/: lorem_ipsum.txt
